Provide better support for older android versions.

--- a/app/src/main/res/layout-v21/calendar_date_picker.xml
+++ b/app/src/main/res/layout-v21/calendar_date_picker.xml
@@ -4,10 +4,38 @@
                 android:layout_height="match_parent">
 
     <DatePicker
+        android:id="@+id/date_picker_dialog_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"
+        android:layout_marginStart="7dp"
         android:spinnersShown="true"
         android:datePickerMode="spinner"/>
+
+    <RelativeLayout
+        android:layout_alignEnd="@id/date_picker_dialog_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/date_picker_dialog_picker"
+        android:layout_marginBottom="5dp">
+
+        <Button
+            android:id="@+id/date_picker_dialog_cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="@string/cancel_string"
+            android:textAllCaps="true"/>
+
+        <Button
+            android:id="@+id/date_picker_dialog_ok_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="@string/ok_string"
+            android:layout_toEndOf="@id/date_picker_dialog_cancel_button"/>
+    </RelativeLayout>
 
 </RelativeLayout>
