--- a/app/src/main/res/drawable/rectangle_border.xml
+++ b/app/src/main/res/drawable/rectangle_border.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
+       android:shape="rectangle"
     >
-    <stroke android:width="1dp" android:color="@color/listViewBorder"/>
+    <stroke
+        android:width="1dp"
+        android:color="@color/listViewBorder"/>
+
+    <solid
+        android:color="@android:color/transparent"/>
 </shape>
