--- a/app/src/main/res/layout/fragment_ingredient_detail.xml
+++ b/app/src/main/res/layout/fragment_ingredient_detail.xml
@@ -22,10 +22,8 @@
                 style="@style/header_name_text_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:background="@color/textBoxBackground"
-                android:gravity="center_horizontal"
                 android:hint="@string/field_name_string"
+                android:inputType="textNoSuggestions"
                 />
 
         </android.support.design.widget.TextInputLayout>
@@ -40,7 +38,6 @@
             android:text="@string/ingredient_irritant"
             android:textColor="@color/black"
             android:textSize="20sp"/>
-
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layout_comment_text_input"
