--- a/app/src/main/res/layout/fragment_ingredient_main.xml
+++ b/app/src/main/res/layout/fragment_ingredient_main.xml
@@ -10,9 +10,7 @@
         android:layout_above="@+id/ingredient_main_new_button"
         android:background="@drawable/rectangle_border"
         android:layout_alignParentTop="true"
-        >
-
-    </ListView>
+        />
 
     <Button
         android:id="@+id/ingredient_main_new_button"
@@ -20,9 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/new_ingredient"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffffff"
-        android:padding="10dp"
+        style="@style/primary_button_style"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp"/>
