--- a/app/src/main/res/layout/fragment_routine_detail.xml
+++ b/app/src/main/res/layout/fragment_routine_detail.xml
@@ -41,10 +41,9 @@
                     style="@style/header_name_text_style"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:background="@color/textBoxBackground"
-                    android:gravity="center_horizontal"
-                    android:hint="@string/field_name_string"/>
+                    android:hint="@string/field_name_string"
+                    android:inputType="textNoSuggestions"
+                    />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -118,9 +117,8 @@
                         android:id="@+id/routine_edit_products"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:backgroundTint="@color/colorPrimary"
-                        android:text="@string/add_remove_string"
-                        android:textColor="@color/white"/>
+                        style="@style/primary_button_style"
+                        android:text="@string/add_remove_string"/>
 
                 </LinearLayout>
 
