--- a/app/src/main/res/layout/listview_item_item_list_dialog.xml
+++ b/app/src/main/res/layout/listview_item_item_list_dialog.xml
@@ -9,21 +9,24 @@
 
     <TextView
         android:id="@+id/item_list_dialog_item_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15sp"
         android:textColor="@color/black"
         android:layout_centerVertical="true"
         android:layout_marginLeft="5dp"
-
+        android:layout_marginStart="5dp"
+        android:layout_toLeftOf="@+id/item_list_dialog_check_box"
+        android:layout_toStartOf="@id/item_list_dialog_check_box"
         />
 
     <CheckBox
-        android:id="@+id/item_list_dialog_check_box"
+        android:id="@id/item_list_dialog_check_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+
         />
 
 
