--- a/app/src/main/res/layout/listview_item_product_main.xml
+++ b/app/src/main/res/layout/listview_item_product_main.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="horizontal"
-          android:padding="5dp">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal"
+              android:paddingBottom="5dp"
+              android:paddingLeft="10dp"
+              android:paddingRight="10dp"
+              android:paddingTop="5dp">
 
     <LinearLayout
-        android:layout_weight="1"
         android:layout_width="0dp"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/product_listview_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:text="name"
             android:textColor="@color/black"
-            android:text="name"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/product_listview_brand"
@@ -29,10 +32,10 @@
 
     <TextView
         android:id="@+id/product_listview_type"
-        android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         android:text="type"/>
 
 </LinearLayout>
