--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,11 +30,16 @@
         <item name="android:imeOptions">actionDone</item>
         <item name="android:inputType">text</item>
         <item name="android:singleLine">true</item>
+        <item name="android:maxLength">140</item>
     </style>
     
     <style name="header_name_text_style" parent="default_edit_text_style">
         <item name="android:textSize">30sp</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:background">@color/textBoxBackground</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:maxLength">30</item>
     </style>
 
     <style name="default_field_label_format">
@@ -50,6 +55,14 @@
     <style name="diary_entry_section_label">
         <item name="android:textSize">25sp</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="primary_button_style">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
     </style>
     
 </resources>
