--- a/app/src/main/res/layout-v21/calendar_date_picker.xml
+++ b/app/src/main/res/layout-v21/calendar_date_picker.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:textColor="@color/colorPrimaryDark"
-            android:text="@string/ok_string"
+            android:text="@string/go_string"
             android:layout_toEndOf="@id/date_picker_dialog_cancel_button"/>
     </RelativeLayout>
 
