--- a/app/src/main/res/layout/fragment_routine_detail.xml
+++ b/app/src/main/res/layout/fragment_routine_detail.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:focusableInTouchMode="true"
-                android:padding="20dp">
+                android:focusableInTouchMode="true">
 
 
     <RelativeLayout
@@ -23,7 +22,8 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/routine_fragment_detail_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                 android:id="@+id/layout_name_text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp">
+                android:layout_margin="20dp">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/routine_name_edit"
@@ -48,10 +48,11 @@
             </android.support.design.widget.TextInputLayout>
 
             <RelativeLayout
-                android:id="@+id/routine_layout_radio_buttons"
+                android:id="@+id/routine_layout_time_buttons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/layout_name_text_input">
+                android:layout_below="@id/layout_name_text_input"
+                android:layout_marginBottom="20dp">
 
                 <TextView
                     android:id="@+id/routine_application_text"
@@ -62,7 +63,7 @@
                     android:text="@string/routine_application_time"/>
 
                 <RadioGroup
-                    android:id="@+id/routine_radio_group"
+                    android:id="@+id/routine_time_radio_group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/routine_application_text"
@@ -88,10 +89,123 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/routine_layout_frequency"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/routine_layout_time_buttons">
+
+                <TextView
+                    android:id="@+id/routine_frequency_title"
+                    style="@style/default_field_label_format"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/routine_frequency_title"/>
+
+                <RadioGroup
+                    android:id="@+id/routine_frequency_radio_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/routine_frequency_title"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/routine_radio_button_needed"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/routine_radio_frequency_needed"
+                        android:textColor="@color/newText"/>
+
+                    <RadioButton
+                        android:id="@+id/routine_radio_button_daily"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/routine_radio_frequency_daily"
+                        android:textColor="@color/newText"/>
+
+                    <RadioButton
+                        android:id="@+id/routine_radio_button_specified"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/routine_radio_frequency_specified"
+                        android:textColor="@color/newText"/>
+
+                </RadioGroup>
+            </RelativeLayout>
+
+            <TableLayout
+                android:id="@+id/routine_frequency_table"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@id/routine_layout_frequency"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:visibility="gone">
+
+                <TableRow
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    >
+
+                    <TextView
+                        android:id="@+id/routine_frequency_text_sunday"
+                        android:text="@string/routine_frequency_sunday"
+                        style="@style/routine_weekday_text_view"
+                        />
+
+                    <TextView
+                        android:id="@+id/routine_frequency_text_monday"
+                        android:text="@string/routine_frequency_monday"
+                        style="@style/routine_weekday_text_view"
+                        />
+
+                    <TextView
+                        android:id="@+id/routine_frequency_text_tuesday"
+                        android:text="@string/routine_frequency_tuesday"
+                        style="@style/routine_weekday_text_view"
+                        />
+
+                    <TextView
+                        android:id="@+id/routine_frequency_text_wednesday"
+                        android:text="@string/routine_frequency_wednesday"
+                        style="@style/routine_weekday_text_view"
+                        />
+
+                    <TextView
+                        android:id="@+id/routine_frequency_text_thursday"
+                        android:text="@string/routine_frequency_thursday"
+                        style="@style/routine_weekday_text_view"
+                        />
+
+                    <TextView
+                        android:id="@+id/routine_frequency_text_friday"
+                        android:text="@string/routine_frequency_friday"
+                        style="@style/routine_weekday_text_view"
+                        />
+
+                    <TextView
+                        android:id="@+id/routine_frequency_text_saturday"
+                        android:text="@string/routine_frequency_saturday"
+                        android:layout_height="50dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:background="@drawable/table_cell_unselected_end_background"
+                        />
+
+                </TableRow>
+            </TableLayout>
+
+            <RelativeLayout
                 android:id="@+id/routine_layout_product_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/routine_layout_radio_buttons">
+                android:layout_below="@id/routine_frequency_table"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
                     android:id="@+id/routine_product_title_layout"
@@ -115,9 +229,9 @@
 
                     <Button
                         android:id="@+id/routine_edit_products"
+                        style="@style/primary_button_style"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/primary_button_style"
                         android:text="@string/add_remove_string"/>
 
                 </LinearLayout>
@@ -125,7 +239,7 @@
                 <com.smithkeegan.mydailyskincare.customClasses.DailySkincareNestedListView
                     android:id="@+id/routine_product_list_view"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="150dp"
                     android:layout_below="@id/routine_product_title_layout"
                     android:background="@drawable/rectangle_border">
                 </com.smithkeegan.mydailyskincare.customClasses.DailySkincareNestedListView>
@@ -137,6 +251,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/routine_layout_product_list"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
