--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,14 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="routine_weekday_text_view">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/table_cell_unselected_background</item>
+    </style>
+
     <style name="primary_button_style">
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColor">@color/white</item>
