Add support for more analytics.

--- a/app/src/main/res/layout/fragment_analytics_main.xml
+++ b/app/src/main/res/layout/fragment_analytics_main.xml
@@ -1,26 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/analytics_query_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/analytics_query_show_me"
-            android:textSize="30sp"
-            android:gravity="center"
-            android:textColor="@color/black"/>
+    <TextView
+        android:id="@+id/analytics_query_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/analytics_query_show_me"
+        android:textColor="@color/black"
+        android:textSize="30sp"/>
 
-        <GridView
-            android:id="@+id/analytics_grid_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/analytics_query_text_view"
-            android:numColumns="auto_fit"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
-        </GridView>
+    <GridView
+        android:id="@+id/analytics_grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/analytics_query_text_view"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="40dp"
+        android:numColumns="auto_fit">
+    </GridView>
+
+    <ProgressBar
+        android:id="@+id/analytics_loading_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/analytics_query_text_view"
+        android:indeterminate="true"
+        android:visibility="invisible"/>
+
+    <ListView
+        android:id="@+id/analytics_results_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/analytics_query_text_view"
+        android:visibility="invisible"
+        />
 
 </RelativeLayout>
