Refactor button properties and string stack. Add back and start over buttons.

--- a/app/src/main/res/layout/fragment_analytics_main.xml
+++ b/app/src/main/res/layout/fragment_analytics_main.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:text="@string/analytics_query_show_me"
         android:textColor="@color/black"
-        android:textSize="30sp"/>
+        android:textSize="20sp"/>
 
     <GridView
         android:id="@+id/analytics_grid_view"
@@ -44,6 +44,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/analytics_query_text_view"
         android:visibility="invisible"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rectangle_border"
         />
 
 </RelativeLayout>
