--- a/app/src/main/res/layout/fragment_item_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
@@ -35,6 +35,7 @@
             android:layout_gravity="center_vertical"
             />
     </LinearLayout>
+
     <ListView
         android:id="@+id/item_dialog_list_view"
         android:layout_width="match_parent"
@@ -42,6 +43,21 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/rectangle_border"
+        android:layout_below="@id/item_dialog_title_layout"
+        />
+
+    <TextView
+        android:id="@+id/item_dialog_no_entries_text"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:background="@drawable/rectangle_border"
+        android:text="@string/item_list_no_entries_found"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:visibility="invisible"
+        android:layout_below="@+id/item_dialog_title_layout"
         />
 
     <Button
@@ -53,6 +69,9 @@
         android:layout_marginBottom="10dp"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:textColor="@color/colorPrimaryDark"
+        android:layout_below="@id/item_dialog_list_view"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         />
 
-</LinearLayout>
+</RelativeLayout>
