--- a/app/src/main/res/layout/activity_calendar_main.xml
+++ b/app/src/main/res/layout/activity_calendar_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,33 +13,37 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         tools:context=".CalendarActivityMain"
+        android:background="@color/white"
         >
 
-            <android.support.design.widget.AppBarLayout
-                android:id="@+id/app_bar"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/AppTheme.AppBarOverlay">
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+        </android.support.design.widget.AppBarLayout>
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
-            </android.support.design.widget.AppBarLayout>
-
-            <include layout="@layout/fragment_calendar_main"/>
+        <include layout="@layout/fragment_calendar_main"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
-    <ListView
-        android:id="@+id/drawer"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
         android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:paddingTop="?attr/actionBarSize"
         android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:background="#ffffff"/>
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/drawer_header_main"
+        app:menu="@menu/menu_navigation_main"
+        app:theme="@style/navigation_menu_style"
+        android:background="@color/white"
+        />
 </android.support.v4.widget.DrawerLayout>
