--- a/app/src/main/res/layout/fragment_ingredient_detail.xml
+++ b/app/src/main/res/layout/fragment_ingredient_detail.xml
@@ -2,7 +2,8 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/white">
 
     <RelativeLayout
 
@@ -22,7 +23,7 @@
                 style="@style/header_name_text_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/field_name_string"
+                android:hint="@string/ingredient_name_string"
                 android:inputType="textNoSuggestions"
                 />
 
