--- a/app/src/main/res/layout/fragment_ingredient_main.xml
+++ b/app/src/main/res/layout/fragment_ingredient_main.xml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:orientation="vertical">
+
     <ListView
         android:id="@+id/ingredient_main_list_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/ingredient_main_new_button"
-        android:background="@drawable/rectangle_border"
         android:layout_alignParentTop="true"
+        android:background="@drawable/rectangle_border"
         />
+
+    <TextView
+        android:id="@+id/ingredient_main_no_ingredients_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/ingredient_main_new_button"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/rectangle_border"
+        android:gravity="center"
+        android:text="@string/ingredient_main_no_ingredients"
+        android:visibility="invisible"/>
 
     <Button
         android:id="@+id/ingredient_main_new_button"
+        style="@style/primary_button_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="@string/new_ingredient"
-        style="@style/primary_button_style"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="@string/new_ingredient"/>
 
 </RelativeLayout>
