--- a/app/src/main/res/layout/fragment_product_main.xml
+++ b/app/src/main/res/layout/fragment_product_main.xml
@@ -14,6 +14,17 @@
 
     </ListView>
 
+    <TextView
+        android:id="@+id/product_main_no_products_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/product_main_new_button"
+        android:background="@drawable/rectangle_border"
+        android:layout_alignParentTop="true"
+        android:visibility="invisible"
+        android:text="@string/product_main_no_products"
+        android:gravity="center"/>
+
     <Button
         android:id="@+id/product_main_new_button"
         android:layout_width="wrap_content"
