--- a/app/src/main/res/layout/listview_item_routine_main.xml
+++ b/app/src/main/res/layout/listview_item_routine_main.xml
@@ -10,7 +10,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="name"
         android:textSize="20sp"
         android:textColor="@color/black"/>
 
@@ -18,7 +17,6 @@
         android:id="@+id/routine_listView_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="time"/>
+        android:layout_weight="1"/>
 
 </LinearLayout>
