--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,7 +8,7 @@
     </style>
 
     <style name="primary_button_style">
-        <item name="android:backgroundTint">@color/colorPrimary</item>
+        <item name="android:backgroundTint">@color/colorAccent</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:padding">10dp</item>
     </style>
