--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,7 +66,7 @@
     </style>
 
     <style name="primary_button_style">
-        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:background">@color/colorAccent</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:padding">10dp</item>
         <item name="android:layout_marginTop">5dp</item>
