Remove unused drawables.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,6 @@
     <color name="black">#000000</color>
     <color name="newText">#808080</color>
     <color name="textBoxBackground">#f2f2f2</color>
+    <color name="diaryEntryBlockBackground">#e6e6e6</color>
     <color name="listViewBorder">#cccccc</color>
 </resources>
